--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-pwa": "^0.16.5",
+    "vite-tsconfig-paths": "^4.2.2",
     "workbox-window": "^7.0.0"
   }
 }
