--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "paths": { "@/*": [ "./src/*" ] },
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -13,7 +14,6 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    // "jsxImportSource": "@emotion/react",
 
     /* Linting */
     "strict": true,
