--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,14 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
+    "target": "ES6",
     "useDefineForClassFields": true,
-    "lib": ["ES2018", "DOM", "DOM.Iterable"],
-    "module": "ESNext",
+    "lib": ["ES6", "DOM", "DOM.Iterable"],
+    "module": "CommonJS",
     "skipLibCheck": true,
     "paths": { "@/*": ["./src/*"] },
 
     /* Bundler mode */
-    "moduleResolution": "bundler",
+    // "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
