--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "dependencies": {
+    "context-filter-polyfill": "^0.3.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-measure": "^2.5.2",
